<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/menu_view_grp_standard">
        <item android:icon="@drawable/ic_settings" android:id="@id/menu_view_config" android:orderInCategory="100" android:title="@string/menu_config" />
        <item android:icon="@drawable/ic_tracking" android:id="@id/menu_view_tracking" android:orderInCategory="100" android:title="@string/menu_tracking" />
        <item android:icon="@drawable/ic_beep_on" android:id="@id/menu_view_audio" android:orderInCategory="100" android:title="@string/menu_audio" />
        <item android:icon="@drawable/ic_settings" android:id="@id/menu_view_settings" android:orderInCategory="100" android:title="@string/menu_settings" />
        <item android:icon="@drawable/ic_cancel" android:id="@id/menu_view_exit" android:orderInCategory="100" android:title="@string/menu_exit" />
    </group>
    <group android:id="@id/menu_view_grp_config">
        <item android:icon="@drawable/ic_settings" android:id="@id/menu_view_defaults" android:orderInCategory="100" android:title="@string/str_baroInterval" android:showAsAction="never" />
        <item android:icon="@drawable/ic_save" android:id="@id/menu_view_save" android:orderInCategory="100" android:title="@string/str_baroInterval" android:showAsAction="never" />
        <item android:icon="@drawable/ic_cancel" android:id="@id/menu_view_cancel" android:orderInCategory="100" android:title="@string/str_menu_cancel" android:showAsAction="never" />
    </group>
</menu>